# esp32jtag_firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RELEASE_NOTES_v0.2.1.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.claude/: settings.json
boards/esp32jtag_s3/: sdkconfig.defaults
boards/esp32s3_devkit/: sdkconfig.defaults
components/CherryDAP/: dap_main.c
components/CherryDAP/projects/esp32s3/main/: DAP_config.h  port_common.h
components/lcd/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  Debug.h  GUI_Paint.c  GUI_Paint.h  LCD_1in83.c  LCD_Driver.c  LCD_Driver.h  char_buf.c  esp32JtagBitbang.h  fonts.h  jtag.c  jtag.h  lcd_library.c  lcd_library.h  pack_jtag_data.c  pack_jtag_data.h  part.c  part.h  pgmspace.h  storage.c  storage.h  usb_test.py  wifi_speed_test.sh  xvc_server.c  xvc_server.h
components/platform_include/: board_profile.h
docs/: board_support_refactor_plan_2026-03-25.md  esp32s3_devkit_blackmagic_debug_2026-03-25.md
main/: CMakeLists.txt  Kconfig.projbuild  cacert.pem  esp32jtag_common.h  gpio_loopback_test.c  gpio_loopback_test.h  idf_component.yml  main.c  port_cfg.h  prvtkey.pem  storage.c  storage.h  types.h  ui.c  ui_events.c  version_info.h
main/boards/: board_profile.c  board_profile.h
main/ice40up5k/: ice.c  ice.h
main/network/: descriptors.c  descriptors.h  network.c  network.h  network_adapter.c  network_mngr.c  network_mngr.h  network_mngr_ota.c  network_mngr_ota.h  uart_websocket.c  uart_websocket.h  web_server.c  web_server.h
main/web/: help.html  logic_analyzer.html  mock_esp32_la.py  website.html
partitions/: ota_1mb.csv  ota_2mb.csv  ota_4mb.csv  partitions_example.csv
